--- a/index.ipynb
+++ b/index.ipynb
@@ -149,13 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-13be4809d813>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-13be4809d813>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if restaurant['rating'] > alternative['rating']\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if restaurant['rating'] > alternative['rating']\n",
-    "    return = "
+    "    if restaurant['rating'] > alternative['rating']:\n",
+    "        "
    ]
   },
   {
