--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price']) > "
+    "    if len(restaurant['price']) > len(alternative)"
    ]
   },
   {
