--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,8 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price']) > len(alternative)"
+    "    if len(restaurant['price']) > len(alternative['price']):\n",
+    "        return 'Mo'"
    ]
   },
   {
