--- a/index.ipynb
+++ b/index.ipynb
@@ -195,9 +195,9 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price'])  len(alternative['price']):\n",
-    "        return 'More expensive'\n",
-    "    return "
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
+    "        return 'Cheaper'\n",
+    "    return 'M'"
    ]
   },
   {
