automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return len(open_restaurants(re)"
+    "    fo\n",
+    "    return len(open_restaurants(restaurants))"
    ]
   },
   {
