automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = {}\n",
-    "    for \n",
+    "    for restauran\n",
     "    return len(open_restaurants(restaurants))"
    ]
   },
