automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = {}\n",
-    "    for restaurant in restaurants\n",
+    "    for restaurant in restaurants:\n",
+    "        if not restu\n",
     "    return len(open_restaurants(restaurants))"
    ]
   },
