automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
     "def open_restaurants(restaurants):\n",
     "    open = {}\n",
     "    for restaurant in restaurants:\n",
-    "        if not restu\n",
+    "        if not restaurant['is_closed']\n",
     "    return len(open_restaurants(restaurants))"
    ]
   },
