--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,8 @@
     "def open_restaurants(restaurants):\n",
     "    open = {}\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant['is_closed']\n",
+    "        if not restaurant['is_closed']:\n",
+    "            open.append[]\n",
     "    return len(open_restaurants(restaurants))"
    ]
   },
