automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,7 @@
     "    open = {}\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
-    "            open.append[]\n",
+    "            open.append(restauran)\n",
     "    return len(open_restaurants(restaurants))"
    ]
   },
